<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="324dp"
        android:layout_height="54dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:fontFamily="@font/jost"
        android:hint="@string/placeholder_username"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <EditText
        android:id="@+id/name"
        android:layout_width="326dp"
        android:layout_height="53dp"
        android:layout_marginTop="132dp"
        android:ems="10"
        android:fontFamily="@font/jost"
        android:inputType="textPersonName"
        android:hint="@string/placeholder_name"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171" />

    <EditText
        android:id="@+id/email"
        android:layout_width="326dp"
        android:layout_height="53dp"
        android:layout_marginTop="220dp"
        android:ems="10"
        android:fontFamily="@font/jost"
        android:inputType="textEmailAddress"
        android:hint="@string/placeholder_email"
        app:layout_constraintBottom_toTopOf="@+id/nohp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/nohp"
        android:layout_width="326dp"
        android:layout_height="53dp"
        android:layout_marginTop="296dp"
        android:ems="10"
        android:fontFamily="@font/jost"
        android:inputType="phone"
        android:hint="@string/placeholder_nohp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/password"
        android:layout_width="326dp"
        android:layout_height="53dp"
        android:layout_marginTop="372dp"
        android:layout_marginBottom="31dp"
        android:ems="10"
        android:fontFamily="@font/jost"
        android:inputType="textPassword"
        android:hint="@string/placeholder_password"
        app:layout_constraintBottom_toTopOf="@+id/confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="326dp"
        android:layout_height="53dp"
        android:layout_marginTop="444dp"
        android:ems="10"
        android:fontFamily="@font/jost"
        android:hint="@string/placeholder_confirmpassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_daftar"
        android:layout_width="95dp"
        android:layout_height="79dp"
        android:background="@drawable/btn_circle"
        android:fontFamily="@font/font_awesome"
        android:text="@string/arrow_right"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password"
        app:layout_constraintVertical_bias="0.194" />

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/jost"
        android:text="Sudah Punya Akun ?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/linkMasuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="32dp"
        android:autoLink="web"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/jost"
        android:text="Masuk"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toEndOf="@+id/textViewQuestion" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/jost"
        android:text="Daftar"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btn_daftar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password" />
</androidx.constraintlayout.widget.ConstraintLayout>